src/test/deca/codegen/valid/UnDivUnF.deca
// Description:
//    tests simple division
//
// Resultats:
//
//
// Historique:
//    cree le 21/01/2017
{
print(1/1.0);
}
