src/test/deca/codegen/invalid/UnDivNoInit_f.deca
// Description:
//    division sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 22/01/2017
{
float x;
print(1.0 / x);
}
